    Fixed: Customer must be allowed to set `name` field of any DNS resource record
    Fixed: IDNs are shown in IDNA form in SSL certificate management interface
    Fixed: iMSCP_Update_Database::addIndex() doesn't allows to set index length
    Rewritten: FTP chooser interface to avoid usage of iframe

INSTALLER
    Added: Conditional statement feature for install.xml files (copy_config items only)
    Fixed: Debug and verbose modes must be set early
    Fixed: Don't die on misconfigured server hostname. Just ask for a valid hostname instead
    Fixed: Plugin setup listeners are no longer registered (regression fix)
    Renamed: imscp-setup script to imscp-reconfigure

PLUGINS
    Fixed: Plugin configuration not synced when triggering plugin list update (when a plugin is in error state)
    Fixed: The 'change' action must be automatically triggered on plugin list update, even for plugins with error state
    Fixed: Wrong events triggered when a plugin is being locked/unlocked
    Updated: API version to 1.0.4

SERVERS
    Added: Own i-MSCP logrorate configuration file for ProFTPD (xferlog file don't need to be rotated)
    Added: Own i-MSCP ProFTPD sysvinit script to solve #IP-1402 - (Wheezy, Precise, Trusty)
    Changed: setenvif module is now always required ((Httpd servers)
    Fixed: Bad regexp in getTraffic() method leading to unmatching of traffic data (VsFTPd)
    Fixed: Could not build local vsftpd package when gpg has been initialized; .changes file cannot be signed
    Fixed: Courier sysvinit script must not be copied when selected PO server is Dovecot
    Fixed: Disabled mod_tls_memcache.c module to avoid weird notice on restart (ProFTPD)
    Fixed: Enable support for UTF-8 file systems (VsFTPD)
    Fixed: Hide real server identity (ProFTPD)
    Fixed: IP addresses are added multiple time in Apache 00_nameserver.conf file (Httpd servers)
    Fixed: ON|OFF string not recognized as boolean value in imscp.cnf conffile (MySQL)